plugins {
    id 'eclipse'
    id 'idea'
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.147'
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

base {
    archivesName = "EpicFight-AnnoyingVillagers-1.21.1"
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

neoForge {
    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    accessTransformers.from(file('src/main/resources/META-INF/accesstransformer.cfg'))

    runs {
        client {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = 'gameTestServer'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()
            programArguments.addAll '--mod', project.mod_id, '--all',
                    '--output', file('src/generated/resources/').absolutePath,
                    '--existing', file('src/main/resources/').absolutePath
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

sourceSets {
    main {
        java {
            exclude { details ->
                def path = details.path.replace('\\', '/')

                // Combat Evolution has no 1.21.1 port. Keep its legacy sources in the
                // repository, but do not compile them into this NeoForge build.
                if (path.startsWith('com/pla/epicfight_annoyingvillagers/compat/combat_evolution/')) return true
                if (path.startsWith('com/pla/epicfight_annoyingvillagers/combatbehaviour/')) return true
                if (path == 'com/pla/epicfight_annoyingvillagers/mixin/ExecutionHandlerMixin.java') return true
                if (path == 'com/pla/epicfight_annoyingvillagers/mixin/ExecutionTaskMixin.java') return true
                if (path == 'com/pla/epicfight_annoyingvillagers/mixin/annoyingvillagers/CommonUtilMixin.java') return true
                if (path == 'com/pla/epicfight_annoyingvillagers/util/MobPatchCommon.java') return true
                if (path == 'com/pla/epicfight_annoyingvillagers/event/ExecuteEvent.java') return true
                if (path == 'com/pla/epicfight_annoyingvillagers/task/MobExecutionTask.java') return true
                if (path == 'com/pla/epicfight_annoyingvillagers/gameasset/AnimsAVExecute.java') return true
                if (path == 'com/pla/epicfight_annoyingvillagers/gameasset/AVExecutionType.java') return true

                return false
            }
        }
        resources {
            srcDir 'src/generated/resources'

            // Execution animations depend on Combat Evolution's animation types and
            // must stay out of the 1.21.1 artifact together with their Java holders.
            exclude 'assets/epicfight_annoyingvillagers/animmodels/animations/biped/av_execute/**'
        }
    }
}

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

repositories {
    mavenCentral()
    maven { url = uri('https://cursemaven.com') }
    flatDir { dirs 'libs' }
    mavenLocal()
}

dependencies {
    implementation 'libs:AnnoyingVillagers-1.21.1:2.0.0'
    implementation 'libs:SmartNpc-1.21.1:2.0.0'
    compileOnly 'curse.maven:aaa-particles-979809:8402890'

    implementation 'curse.maven:epic-fight-mod-405076:8175609'
    implementation 'curse.maven:weapons-of-miracles-epicfight-918614:8829395'
    implementation 'curse.maven:epicfight-nightfall-1307848:8573921'
    implementation 'curse.maven:epic-fight-invincible-1184379:8390375'
    compileOnly 'curse.maven:epic-fight-avalon-1268823:7420442'
    implementation 'curse.maven:epicfight-clash-blade-1408812:8937844'

    compileOnly(annotationProcessor('io.github.llamalad7:mixinextras-common:0.5.0'))
}

def generateModMetadata = tasks.register('generateModMetadata', ProcessResources) {
    def replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            neo_version_range      : neo_version_range,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from 'src/main/templates'
    into 'build/generated/sources/modMetadata'
}

sourceSets.main.resources.srcDir generateModMetadata
neoForge.ideSyncTask generateModMetadata

tasks.named('jar', Jar).configure {
    destinationDirectory = file('C:/Users/Admin/Desktop/Minecraft/delivery')
    manifest {
        attributes([
                'Specification-Title'      : mod_id,
                'Specification-Vendor'     : mod_authors,
                'Specification-Version'    : '1',
                'Implementation-Title'     : project.name,
                'Implementation-Version'   : project.jar.archiveVersion,
                'Implementation-Vendor'    : mod_authors,
                'Implementation-Timestamp' : new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven { url = "file://${project.projectDir}/mcmodsrepo" }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
